corrected a picture, padding and the alignement of the grid in the navigation bar

--- a/src/scss/modules/_header.scss
+++ b/src/scss/modules/_header.scss
@@ -4,7 +4,8 @@
   background: var(--main-color);
   border-bottom: 1px solid var(--black);
   display: flex;
-  justify-content: space-between;
+  z-index: 5;
+  padding: 10px 50px;
 }
 
 .slogan {
